--- a/index.html
+++ b/index.html
@@ -22,9 +22,22 @@
                 </div>
             </div>
         </div>
-
     </header>
     <main>
+        <section class="action padding-tb">
+            <div class="container flex">
+                <div class="half action-content">
+                    <h1 class="heading">Set it in Action</h1>
+                    <p class="action-p">Explore the live preview and imagine your <br> brand in this bold new look.</p>
+                    <div>
+                        <button class="btn btn-animation">Launch Live Preview</button>
+                    </div>
+                </div>
+                <div class="half center">
+                    <img class="action-img" src="./images/wc-mini.png" alt="">
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
