user section done

--- a/index.html
+++ b/index.html
@@ -39,6 +39,29 @@
             </div>
         </section>
 
+
+        <section class="user section-margin">
+            <div class="container user-content">
+                <h2 class="user-section-heading">Joined Thousand of Productive Users</h2>
+                <div class="user-item">
+                    <div>
+                        <h1 class="user-heading">50K</h1>
+                        <p class="action-p">Active User</p>
+                    </div>
+                    <div>
+                        <h1 class="user-heading">2M+</h1>
+                        <p class="action-p">Focus Sessions</p>
+                    </div>
+                    <div>
+                        <h1 class="user-heading">95%</h1>
+                        <p class="action-p">Satisfaction Rate</p>
+                    </div>
+                    
+                </div>
+
+            </div>
+        </section>
+
     </main>
     <footer>
 
