review section done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/b1eb4a98b8.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -56,10 +57,82 @@
                         <h1 class="user-heading">95%</h1>
                         <p class="action-p">Satisfaction Rate</p>
                     </div>
-                    
+
                 </div>
 
             </div>
+        </section>
+
+        <section class="review">
+            <div class="container">
+                <h1 class="heading center">What our user say</h1>
+                <div class="review-content">
+                    <div class="review-item">
+                        <div class="star">
+                            <!-- star -->
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div>
+                            <h3 class="card-heading">Loved By Designers</h3>
+                            <p class="card-text">This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                            <div class="review-end ">
+                                <img src="./images/avatar.png" alt="">
+                                <div>
+                                    <p>Reviewer name</p>
+                                    <p>Date</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="review-item">
+                        <div class="star">
+                            <!-- star -->
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div>
+                            <h3 class="card-heading">Loved By Designers</h3>
+                            <p class="card-text">This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                            <div class="review-end ">
+                                <img src="./images/avatar.png" alt="">
+                                <div>
+                                    <p>Reviewer name</p>
+                                    <p>Date</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="review-item">
+                        <div class="star">
+                            <!-- star -->
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div>
+                            <h3 class="card-heading">Loved By Designers</h3>
+                            <p class="card-text">This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                            <div class="review-end ">
+                                <img src="./images/avatar.png" alt="">
+                                <div>
+                                    <p>Reviewer name</p>
+                                    <p>Date</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
     </main>
