--- a/index.html
+++ b/index.html
@@ -132,12 +132,33 @@
                     </div>
                 </div>
             </div>
+        </section>
 
+        <section class="form-section"> 
+            
+        <div class="footer-column">
+            <h3 class="section-title">Let’s Inbox me</h3>
+            <form action="input-container">
+                <input type="text" name="" id="" placeholder="Your Name">
+                <input type="email" name="" id="" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="20" placeholder="Message"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
+        </div>
         </section>
 
     </main>
-    <footer>
-
+    <footer class=" footer section-margin">
+        <div class="container">
+            <h1 class="user-heading">Logo</h1>
+            <p class="gray">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+            <div class="footer-link">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">How it works</a>
+                <a href="#">Services</a>
+            </div>
+        </div>
     </footer>
 </body>
 
