--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
     <header class="header">
         <nav class="flex container">
-            <h2>LOgo</h2>
+            <h2 class="logo">LimLite</h2>
             <button class="btn btn-animation">Sigup</button>
         </nav>
         <div class="banner flex-center container">
             <div class="banner-content">
-                <h1>Cool Dark UI Template for Webflow Agencies!</h1>
+                <h1 class="text-center">Cool Dark UI Template for Webflow Agencies!</h1>
                 <div class="center">
                     <button class="btn btn-animation ">Stay Focused</button>
                 </div>
@@ -78,7 +78,8 @@
                         </div>
                         <div>
                             <h3 class="card-heading">Loved By Designers</h3>
-                            <p class="card-text">This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                            <p class="card-text">This template instantly leveled up our <br> presence.” – Studio Vertex
+                            </p>
                             <div class="review-end ">
                                 <img src="./images/avatar.png" alt="">
                                 <div>
@@ -99,7 +100,8 @@
                         </div>
                         <div>
                             <h3 class="card-heading">Loved By Designers</h3>
-                            <p class="card-text">This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                            <p class="card-text">This template instantly leveled up our <br> presence.” – Studio Vertex
+                            </p>
                             <div class="review-end ">
                                 <img src="./images/avatar.png" alt="">
                                 <div>
@@ -120,7 +122,8 @@
                         </div>
                         <div>
                             <h3 class="card-heading">Loved By Designers</h3>
-                            <p class="card-text">This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                            <p class="card-text">This template instantly leveled up our <br> presence.” – Studio Vertex
+                            </p>
                             <div class="review-end ">
                                 <img src="./images/avatar.png" alt="">
                                 <div>
@@ -134,24 +137,32 @@
             </div>
         </section>
 
-        <section class="form-section"> 
-            
-        <div class="footer-column">
-            <h3 class="section-title">Let’s Inbox me</h3>
-            <form action="input-container">
-                <input type="text" name="" id="" placeholder="Your Name">
-                <input type="email" name="" id="" placeholder="Your Email">
-                <textarea name="" id="" cols="30" rows="20" placeholder="Message"></textarea>
-                <input class="btn-primary" type="submit" value="Submit">
-            </form>
-        </div>
+        <section class="form-section section-margin">
+
+            <div class="form-content container">
+                <div class="half form-heading">
+                    <h1>Let’s Get in Touch </h1>
+                </div>
+                <form class="input-container half">
+                    <label for="email">Email</label>
+                    <input type="email" name="" id="" placeholder="example@gmai.com">
+                    <label for="email">Name</label>
+                    <input type="text" name="" id="" placeholder="Full Name">
+                    <label for="email">Message</label>
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Write your message"></textarea>
+                    <input class="btn btn-animation" type="submit" value="Get in Touch">
+                </form>
+            </div>
+
+
         </section>
 
     </main>
     <footer class=" footer section-margin">
         <div class="container">
-            <h1 class="user-heading">Logo</h1>
-            <p class="gray">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+            <h1 class="user-heading">LimLite</h1>
+            <p class="gray">Ready to elevate your online presence? Contact us today to discuss <br> your project and
+                discover how we can bring your vision to life.</p>
             <div class="footer-link">
                 <a href="#">Home</a>
                 <a href="#">About</a>
