--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                             </p>
                             <div class="review-end ">
                                 <img src="./images/avatar.png" alt="">
-                                <div>
-                                    <p>Reviewer name</p>
-                                    <p>Date</p>
+                                <div class="user-info">
+                                    <p>Mark toky</p>
+                                    <p>5th May, 23</p>
                                 </div>
                             </div>
                         </div>
@@ -104,9 +104,9 @@
                             </p>
                             <div class="review-end ">
                                 <img src="./images/avatar.png" alt="">
-                                <div>
-                                    <p>Reviewer name</p>
-                                    <p>Date</p>
+                                <div class="user-info">
+                                    <p>Henry Job</p>
+                                    <p>30th Dec, 24</p>
                                 </div>
                             </div>
                         </div>
@@ -126,9 +126,9 @@
                             </p>
                             <div class="review-end ">
                                 <img src="./images/avatar.png" alt="">
-                                <div>
-                                    <p>Reviewer name</p>
-                                    <p>Date</p>
+                                <div class="user-info">
+                                    <p>Ada lavles</p>
+                                    <p>11th July, 2020</p>
                                 </div>
                             </div>
                         </div>
